--- a/自定义控件/新闻频道管理的炫酷实现.md
+++ b/自定义控件/新闻频道管理的炫酷实现.md
@@ -29,10 +29,24 @@ typora-copy-images-to: img
 
    使用Rect类确定被触摸到的子控件
 
-## View.OnLongClickListener
+## 新闻频道管理的多种实现
+
+实现类似于网易新闻频道管理有几种方式
+
+实现方案1：使用两个GridView实现，这是比较早的一种解决方案，比较复杂，具体可以参考 [Android 高仿 频道管理----网易、今日头条、腾讯视频 ](http://blog.csdn.net/vipzjyno1/article/details/25005851)
+
+实现方案2：使用两个RecyclerView或ListView实现，这种实现方式好于于方案1
+
+实现方案3：使用一个RecyclerView实现，这是我目前见过的比较好的方式，貌似比网易新闻等客户端的要流畅，具体可以参考：[高仿网易新闻栏目动画效果](http://blog.csdn.net/tyk0910/article/details/51460808) 、 [使用ItemTouchHelper高效地实现 今日头条 、网易新闻 的频道排序、移动](http://www.jianshu.com/p/d30fd8da4eac)
+
+实现方案4：使用两个GridLayout实现，也就是本文要介绍的方式
+
+## 拖拽
+
+长按item开始拖拽
 
 ```java
-private View.OnLongClickListener olcl = new View.OnLongClickListener() {
+private View.OnLongClickListener longClickListener = new View.OnLongClickListener() {
         @Override
         public boolean onLongClick(View v) {
             //长按时，开始拖拽操作，显示出阴影
@@ -45,10 +59,9 @@ private View.OnLongClickListener olcl = new View.OnLongClickListener() {
         }
     };
 ```
+拖拽方法参数说明
 
-## 拖拽
-
-- startDragAndDrop()
+- startDragAndDrop() api24
 - startDrag(ClipData data, DragShadowBuilder shadowBuilder, Object myLocalState, int flag)
 
 参数1：ClipData data 拖拽过程中可以transferred的数据，可以为空
@@ -59,10 +72,10 @@ private View.OnLongClickListener olcl = new View.OnLongClickListener() {
 
 参数4：int flag，可以控制拖拽操作的flag，未定义，传0即可
 
-## View.OnDragListener
+## 拖拽监听
 
 ```java
-private View.OnDragListener odl =  new View.OnDragListener() {
+private View.OnDragListener dragListener =  new View.OnDragListener() {
         /**
          * ACTION_DRAG_STARTED:当拖拽操作执行时，就会执行一次
          * DragEvent.ACTION_DRAG_ENDED：当拖拽事件结束，手指抬起时，就是执行一次
@@ -110,7 +123,7 @@ private View.OnDragListener odl =  new View.OnDragListener() {
     };
 ```
 
-### DragEvent
+## DragEvent
 
 | 拖拽事件                           | 说明                               |
 | :----------------------------- | :------------------------------- |
@@ -182,8 +195,9 @@ private void init() {
 
 ```java
 public class DragGridlayout extends GridLayout{
+
     private  static final int columnCount = 4;//列数
-    private boolean allowdrag;//记录当前控件是否可以进行拖拽操作
+    private boolean isAllowDrag;//记录当前控件是否可以进行拖拽操作
 
     public DragGridlayout(Context context) {
         this(context,null);
@@ -198,11 +212,24 @@ public class DragGridlayout extends GridLayout{
         init();
     }
 
+/*  static SparseArray<String> dragEventType = new SparseArray<>();
+    static{
+        dragEventType.put(DragEvent.ACTION_DRAG_STARTED, "STARTED");
+        dragEventType.put(DragEvent.ACTION_DRAG_ENDED, "ENDED");
+        dragEventType.put(DragEvent.ACTION_DRAG_ENTERED, "ENTERED");
+        dragEventType.put(DragEvent.ACTION_DRAG_EXITED, "EXITED");
+        dragEventType.put(DragEvent.ACTION_DRAG_LOCATION, "LOCATION");
+        dragEventType.put(DragEvent.ACTION_DROP, "DROP");
+    }
+
+    public static String getDragEventAction(DragEvent de){
+        return dragEventType.get(de.getAction());
+    }*/
+
     //初始化方法
     private void init() {
         //  android:columnCount="4"
         //  android:animateLayoutChanges="true"
-
         this.setColumnCount(columnCount);
         this.setLayoutTransition(new LayoutTransition());
     }
@@ -213,10 +240,16 @@ public class DragGridlayout extends GridLayout{
         }
     }
 
-    private void addItem(String item) {
-        TextView textView = newItemView();
-        textView.setText(item);
-        this.addView(textView);
+    public void addItem(String content, int index) {
+        TextView tv = newItemView();
+        tv.setText(content);
+        addView(tv,index);
+    }
+
+    public void addItem(String content) {
+        TextView tv = newItemView();
+        tv.setText(content);
+        addView(tv);
     }
 
     private TextView newItemView() {
@@ -225,17 +258,20 @@ public class DragGridlayout extends GridLayout{
         tv.setBackgroundResource(R.drawable.selector_tv_bg);
         GridLayout.LayoutParams layoutParams = new GridLayout.LayoutParams();
         layoutParams.width = getResources().getDisplayMetrics().widthPixels/4 - 2*margin;//宽为屏幕宽的4分之一
-        layoutParams.height = dip2px(26);
+        layoutParams.height = dip2px(25);
         layoutParams.setMargins(margin,margin,margin,margin);
         tv.setGravity(Gravity.CENTER);
         tv.setLayoutParams(layoutParams);
 
-        if (this.allowdrag) {
-            tv.setOnLongClickListener(olcl);
+        if (isAllowDrag) {
+            //给条目设置长按点击事件
+            tv.setOnLongClickListener(mLongClickListener);
         } else {
             tv.setOnLongClickListener(null);
         }
 
+        //设置条目的点击事件
+        tv.setOnClickListener(onClickListener);
         return tv;
     }
 
@@ -246,7 +282,8 @@ public class DragGridlayout extends GridLayout{
     }
 
     private View dragedView;//被拖拽的视图
-    private View.OnLongClickListener olcl = new View.OnLongClickListener() {
+
+    private View.OnLongClickListener mLongClickListener = new View.OnLongClickListener() {
         @Override
         public boolean onLongClick(View v) {
             //长按时，开始拖拽操作，显示出阴影
@@ -254,25 +291,31 @@ public class DragGridlayout extends GridLayout{
             dragedView = v;
             v.startDrag(null, new View.DragShadowBuilder(v), null, 0);
             v.setEnabled(false);
-            //v.startDragAndDrop(null, new View.DragShadowBuilder(v), null, 0);
-            return false;
+            //v.startDragAndDrop(null, new View.DragShadowBuilder(v), null, 0); // api24
+            return true;
+        }
+    };
+
+    private OnClickListener onClickListener = new OnClickListener() {
+        @Override
+        public void onClick(View v) {
+            if(onDragItemClickListener != null){
+                onDragItemClickListener.onDragItemClick((TextView) v);
+            }
         }
     };
 
 
-    public void setAllowDrag(boolean allowDrag) {
-        this.allowdrag = allowDrag;
-        if (this.allowdrag) {
-            this.setOnDragListener(odl);
+    public void setAllowDrag(boolean isAllowDrag) {
+        this.isAllowDrag = isAllowDrag;
+        if (this.isAllowDrag) {
+            this.setOnDragListener(mDragListener);
         } else {
             this.setOnDragListener(null);
         }
-
     }
 
-
-
-    private View.OnDragListener odl =  new View.OnDragListener() {
+    private View.OnDragListener mDragListener =  new View.OnDragListener() {
         /**
          * ACTION_DRAG_STARTED:当拖拽操作执行时，就会执行一次
          * DragEvent.ACTION_DRAG_ENDED：当拖拽事件结束，手指抬起时，就是执行一次
@@ -280,7 +323,6 @@ public class DragGridlayout extends GridLayout{
          * DragEvent.ACTION_DRAG_EXITED：当手指离开设置了拖拽监听的控件范围内的瞬间执行一次
          * DragEvent.ACTION_DRAG_LOCATION：当手指在设置了拖拽监听的控件范围内，移动时，实时会执行，执行N次
          * DragEvent.ACTION_DROP：当手指在设置了拖拽监听的控件范围内松开时，执行一次
-         *
          *
          * @param v 当前监听拖拽事件的view(其实就是mGridLayout)
          * @param event 拖拽事件
@@ -298,7 +340,7 @@ public class DragGridlayout extends GridLayout{
                     int touchIndex = getTouchIndex(event);
                     //说明触摸点进入了某一个子控件,判断被拖拽的视图与进入的子控件对象不是同一个的时候才进行删除添加操作
 
-                    if (touchIndex > -1&&dragedView != null&&dragedView != DragGridlayout.this.getChildAt(touchIndex)) {
+                    if (touchIndex > -1 && dragedView != null && dragedView != DragGridlayout.this.getChildAt(touchIndex)) {
                         DragGridlayout.this.removeView(dragedView);
                         DragGridlayout.this.addView(dragedView,touchIndex);
                     }
@@ -340,9 +382,139 @@ public class DragGridlayout extends GridLayout{
             mRects[i] = rect;
         }
     }
+
+    private OnDragItemClickListener onDragItemClickListener;
+
+    public interface OnDragItemClickListener{
+        public void onDragItemClick(TextView tv);
+    }
+
+    public void setOnDragItemClickListener(OnDragItemClickListener onDragItemClickListener) {
+        this.onDragItemClickListener = onDragItemClickListener;
+    }
+}
+```
+## MainActivity
+
+布局文件
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+    <LinearLayout
+        android:id="@+id/activity_main"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:gravity="center_vertical"
+            android:onClick="addItem"
+            android:text="添加条目"
+            android:textColor="?android:attr/textColorPrimary"/>
+
+        <com.github.draggridlayout.DragGridlayout
+            android:id="@+id/selectedChannel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"/>
+
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:background="?attr/colorButtonNormal"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:text="点击选择频道"
+            android:textColor="?android:attr/textColorPrimary"/>
+
+        <com.github.draggridlayout.DragGridlayout
+            android:id="@+id/unSelectedChannel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"/>
+
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
+```
+代码实现
+```java
+public class MainActivity extends AppCompatActivity {
+
+    private DragGridlayout mSelectedChannel;
+    private DragGridlayout mUnSelectedChannel;
+
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        initViews();
+        initData();
+        initEvent();
+    }
+
+    private void initViews() {
+        setContentView(R.layout.activity_main);
+        mSelectedChannel = (DragGridlayout) findViewById(R.id.selectedChannel);
+        mUnSelectedChannel = (DragGridlayout) findViewById(R.id.unSelectedChannel);
+        mSelectedChannel.setAllowDrag(true);
+        mUnSelectedChannel.setAllowDrag(true);
+    }
+
+    private void initData() {
+        List<String> selectedChannel = new ArrayList<>();
+        selectedChannel.add("头条");
+        ...
+        mSelectedChannel.setItems(selectedChannel);
+
+        List<String> unSelectedChannel = new ArrayList<>();
+        unSelectedChannel.add("NBA");
+        ...
+        mUnSelectedChannel.setItems(unSelectedChannel);
+    }
+
+    public void initEvent(){
+        //设置条目点击监听
+        mSelectedChannel.setOnDragItemClickListener(new DragGridlayout.OnDragItemClickListener() {
+            @Override
+            public void onDragItemClick(TextView tv) {
+                //移除点击的条目，把条目添加到下面的Gridlayout
+                mSelectedChannel.removeView(tv);//移除是需要时间,不能直接添加
+                mUnSelectedChannel.addItem(tv.getText().toString(),0);
+            }
+        });
+
+        mUnSelectedChannel.setOnDragItemClickListener(new DragGridlayout.OnDragItemClickListener() {
+            @Override
+            public void onDragItemClick(TextView tv) {
+                //移除点击的条目，把条目添加到上面的Gridlayout
+                mUnSelectedChannel.removeView(tv);//移除是需要时间,不能直接添加
+                mSelectedChannel.addItem(tv.getText().toString());
+            }
+        });
+    }
+
+    private int index = 0;
+
+    public void addItem(View view) {
+        mSelectedChannel.addItem("频道" + index++,0);
+    }
+
 }
 ```
 
-## 摩天轮控件分析
+## 源代码
 
-![摩天轮控件分析](img/摩天轮控件分析.png)
+https://github.com/JackChan1999/DragGridLayout
