--- a/学习之路/黑马公开课.md
+++ b/学习之路/黑马公开课.md
@@ -158,6 +158,20 @@ http://open.itcast.cn/python/53-554.html
 
 链接：http://pan.baidu.com/s/1i4UW0BF 密码：hu6i
 
+## 即时通讯
+
+01即时通讯Android客户端(基于环信) 打造自己的专属聊天应用
+http://pan.baidu.com/s/1dE19Nnr
+链接: http://pan.baidu.com/s/1ge6V3ij 密码: rnrm
+
+02即时通讯Android客户端(基于环信) 打造自己的专属聊天应用
+http://pan.baidu.com/s/1pLAZoin
+链接: http://pan.baidu.com/s/1pL0jRr9 密码: ykmb
+
+【毕设项目】03即时通讯Android客户端(基于环信) 打造自己的专属聊天应用
+https://pan.baidu.com/s/1eRNS9BO
+链接: https://pan.baidu.com/s/1eS02pea 密码: r6sa
+
 ## 黑马Android最新课程
 
 自定义控件v3.0:链接: https://pan.baidu.com/s/1jIfrtMe 密码: 4irm
