--- a/网络编程/网络编程.md
+++ b/网络编程/网络编程.md
@@ -1278,3 +1278,9 @@ public class CacheDispatcher extends Thread {
     }
 }
 ```
+## Cookie、Session和Token
+
+Cookie：用户身份的唯一标识，跟踪用户行为，存在客户端，Session存在服务器，第一次请求服务器的时候生成。
+
+
+
