--- a/Android基础/持续集成.md
+++ b/Android基础/持续集成.md
@@ -1,4 +1,14 @@
+## 持续集成与自动化
+
+Continuous  Integration
+
 持续提交代码，持续编译，持续测试，持续修复bug
+
+Jenkins，Strider，Travis
+
+## Jenkins
+
+自动打包
 
 ## 版本管理
 
@@ -13,3 +23,6 @@ CCNET
 ## 多渠道打包
 
 友盟统计等
+
+## 自动化
+
