--- a/学习之路/黑马公开课.md
+++ b/学习之路/黑马公开课.md
@@ -187,3 +187,9 @@ Android新特性v4.0：链接: https://pan.baidu.com/s/1i5BNx1F 密码: 734t
 AndroidStudio:链接: https://pan.baidu.com/s/1gfn4Sqn 密码: kh1k
 性能优化专题-消除卡顿: 链接:https://pan.baidu.com/s/1kVBLoqF 密码:ug8i
 
+BAT大咖解密Android面试系列课	链接: https://pan.baidu.com/s/1qY9bvXU 密码: efsk
+
+玩转算法 链接: https://pan.baidu.com/s/1i5Jzb9N 密码: 5p5d
+
+职业侠300本IT编程经典书籍  链接：http://pan.baidu.com/s/1c2B2iAW 密码：11fr
+
