--- a/地图开发/手机定位.md
+++ b/地图开发/手机定位.md
@@ -3,7 +3,7 @@
 经度: longitude -180~180，纬度: latitude -90~90
 经度的起点为本初子午线，规定以过伦敦格林威治天文台的那条经线为0度经线，即本初子午线
 
-![](../assets/location1.jpg)
+![](images/location1.jpg)
 
 # 2. 网络定位 
 
@@ -12,7 +12,7 @@
 
 [纯真IP数据库](http://www.pc6.com/softview/SoftView_41490.html)：收集包括中国电信、中国网通、长城宽带、网通宽带、聚友宽带等 ISP 的最新准确IP地址数据，五天更新一次
 
-![](../assets/location2.png)
+![](images/location2.png)
 
 # 3. 基站定位
 基站定位一般应用于手机用户，手机基站定位服务又叫做移动位置服务（LBS：Location Based Service），它是通过电信移动运营商的网络（如GSM网）获取移动终端用户的位置信息（经纬度坐标），在电子地图平台的支持下，为用户提供相应服务 的一种增值业务，例如目前中国移动动感地带提供的动感位置查询服务等
@@ -20,15 +20,15 @@
 工作原理：手机能打电话，是需要基站的。手机定位也是用基站的。手机附近能收到3个基站的信号，就可以定位了。
 基站定位有可能很准确，比如基站多的地方；如果基站少的话就会相差很大。精确度：几十米到几公里不等
 
-![](../assets/location3.png)
+![](images/location3.png)
 
-![](../assets/location4.jpg)
+![](images/location4.jpg)
 
 # 4. GPS定位
 
-![](../assets/location5.png)
+![](images/location5.png)
 
-![](../assets/location6.jpg) ![](../assets/location7.png)
+![](images/location6.jpg) ![](images/location7.png)
 
 GPS（Global Positioning System）即全球定位系统，是美国研制的卫星导航定位系统，今采用wgs84坐标系统。因地球在天球空间中的位置是不稳定的，故协议用wgs84某一可的北极点指向位置
 
@@ -42,6 +42,26 @@ A-GPS 使用了卫星定位 需要联网辅助修正位置，需要3颗卫星；
 卫星：美国人、欧洲人的卫星。
 北斗：中国的，但没有民用，只是在大巴，战机等使用。
 精确度：15米左右
+
+- LocationManager 位置管理器
+  - requestLocationUpdates() 获取位置信息
+  - removeUpdates()
+  - getBestProvider()
+- LocationListener 定位提供者
+  - onLocationChanged()
+  - onStatusChanged()
+  - onProviderEnabled()
+  - onProviderDisabled()
+- Location 位置信息
+  - getLongitude() 获取经度
+  - getLatitude() 获取纬度
+  - getAccuracy() 获取精度
+- Criteria 标准
+  - setAccuracy() 设置精度
+  - setAltitudeRequired()
+  - setBearingRequired()
+  - setCostAllowed()
+  - setPowerRequirement()
 
 
 ```java
@@ -58,7 +78,6 @@ public class MainActivity extends Activity {
         listener = new MyLocationListener();
         // 第二个参数：两次位置更新的时间间隔
         lm.requestLocationUpdates("gps", 0, 0, listener);
-
     }
 
     class MyLocationListener implements LocationListener {
@@ -73,7 +92,6 @@ public class MainActivity extends Activity {
             textView.setText(longitude + latitude + accuracy);
 
             setContentView(textView);
-
         }
 
         // 当某一个位置提供者状态发生变化的时候 关闭--》开启 或者开启--》关闭
@@ -121,15 +139,17 @@ lm.requestLocationUpdates(provider, 0, 0, listener);
 
 设置参数细化：
 ```java
-criteria.setAccuracy(Criteria.ACCURACY_FINE);//设置为最大精度 
-criteria.setAltitudeRequired(false);//不要求海拔信息 
-criteria.setBearingRequired(false);//不要求方位信息 
-criteria.setCostAllowed(true);//是否允许付费 
-criteria.setPowerRequirement(Criteria.POWER_LOW);//对电量的要求 
+criteria.setAccuracy(Criteria.ACCURACY_FINE);      //设置为最大精度 
+criteria.setAltitudeRequired(false);               //不要求海拔信息 
+criteria.setBearingRequired(false);                //不要求方位信息 
+criteria.setCostAllowed(true);                     //是否允许付费 
+criteria.setPowerRequirement(Criteria.POWER_LOW);  //对电量的要求 
 ```
+临近警告
+
 # 5. A-GPS
 
-![](../assets/location8.jpg)
+![](images/location8.jpg)
 
 A-GPS（Assisted GPS）即辅助GPS技术，它可以提高 GPS 卫星定位系统的 性能。通过移动通信运营基站它可以快速地定位，广泛用于含有GPS功能的手机上。GPS通过卫星发出的无线电信号来进行定位。当在很差的信号条件下，例如 在一座城市，这些信号可能会被许多不规则的建筑物、墙壁或树木削弱。在这样的条件下，非A-GPS 导航设备可能无法快速定位，而A-GPS 系统可以通过运营商基站信息来进行快速定位
 
@@ -167,15 +187,11 @@ public static void main(String[] args) {
 import java.io.InputStream;
 import java.io.ObjectInputStream;
 
-/**
- * 火星地球坐标转化.地图坐标修偏
- * 
- */
+// 火星地球坐标转化.地图坐标修偏
 public class ModifyOffset {
 	private static ModifyOffset modifyOffset;
 	static double[] X = new double[660 * 450];
 	static double[] Y = new double[660 * 450];
-
 
 	private ModifyOffset(InputStream inputStream) throws Exception {
 		init(inputStream);
@@ -253,7 +269,6 @@ public class ModifyOffset {
 		}
 		return new PointDouble(x, y);
 	}
-
 }
 
 class PointDouble {
@@ -275,3 +290,4 @@ class PointDouble {
 
 ## 百度地图
 
+## 高德地图
